fix:优化数据更新